--- a/nifty_data.ipynb
+++ b/nifty_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,9 +95,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\Ayush\\college\\4thyear\\proj\\venv\\Lib\\site-packages\\yfinance\\utils.py:775: FutureWarning: The 'unit' keyword in TimedeltaIndex construction is deprecated and will be removed in a future version. Use pd.to_timedelta instead.\n",
+      "  df.index += _pd.TimedeltaIndex(dst_error_hours, 'h')\n"
+     ]
+    }
+   ],
    "source": [
     "# get nifty data\n",
     "nifty = yf.Ticker(\"^NSEI\")\n",
@@ -107,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -173,28 +182,28 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2024-01-17 00:00:00+05:30</th>\n",
-       "      <td>21571.949219</td>\n",
+       "      <th>2024-02-05 00:00:00+05:30</th>\n",
+       "      <td>21771.699219</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2024-01-18 00:00:00+05:30</th>\n",
-       "      <td>21462.250000</td>\n",
+       "      <th>2024-02-06 00:00:00+05:30</th>\n",
+       "      <td>21929.400391</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2024-01-19 00:00:00+05:30</th>\n",
-       "      <td>21622.400391</td>\n",
+       "      <th>2024-02-07 00:00:00+05:30</th>\n",
+       "      <td>21930.500000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2024-01-23 00:00:00+05:30</th>\n",
-       "      <td>21238.800781</td>\n",
+       "      <th>2024-02-08 00:00:00+05:30</th>\n",
+       "      <td>21717.949219</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2024-01-24 00:00:00+05:30</th>\n",
-       "      <td>21453.949219</td>\n",
+       "      <th>2024-02-09 00:00:00+05:30</th>\n",
+       "      <td>21782.500000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>4008 rows × 1 columns</p>\n",
+       "<p>4019 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -206,16 +215,16 @@
        "2007-09-20 00:00:00+05:30   4747.549805\n",
        "2007-09-21 00:00:00+05:30   4837.549805\n",
        "...                                 ...\n",
-       "2024-01-17 00:00:00+05:30  21571.949219\n",
-       "2024-01-18 00:00:00+05:30  21462.250000\n",
-       "2024-01-19 00:00:00+05:30  21622.400391\n",
-       "2024-01-23 00:00:00+05:30  21238.800781\n",
-       "2024-01-24 00:00:00+05:30  21453.949219\n",
+       "2024-02-05 00:00:00+05:30  21771.699219\n",
+       "2024-02-06 00:00:00+05:30  21929.400391\n",
+       "2024-02-07 00:00:00+05:30  21930.500000\n",
+       "2024-02-08 00:00:00+05:30  21717.949219\n",
+       "2024-02-09 00:00:00+05:30  21782.500000\n",
        "\n",
-       "[4008 rows x 1 columns]"
+       "[4019 rows x 1 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
